--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 <body>
     <!-- Spencer was here -->
+
     <div class="row">
         <nav>
             <div class="nav-wrapper">
@@ -39,158 +40,96 @@
             </div>
         </nav>
     </div>
-    <div class="row">
-        <div class="carousel">
-            <a class="carousel-item" href="#one!">
-                <img src="assets/images/amazon.png">
-            </a>
-            <a class="carousel-item" href="#two!">
-                <img class="apple" src="assets/images/apple.png">
-            </a>
-            <a class="carousel-item" href="#three!">
-                <img class="tesla"src="assets/images/tesla.png">
-            </a>
-            <a class="carousel-item" href="#four!">
-                <img class="netflix" src="assets/images/netflix.png">
-            </a>
-            <a class="carousel-item" href="#five!">
-                <img class="jpmorgan" src="assets/images/jpmorgan.png">
-            </a>
-            <a class="carousel-item" href="#six!">
-                <img class="alphabet" src="assets/images/alphabet.png">
-            </a>
-            <a class="carousel-item" href="#seven!">
-                <img class="berkshire" src="assets/images/berkshire.png">
-            </a>
-            <a class="carousel-item" href="#eight!">
-                <img class="microsoft" src="assets/images/microsoft.png">
-            </a>
-            <a class="carousel-item" href="#nine!">
-                <img class="disney" src="assets/images/disney.png">
-            </a>
-            <a class="carousel-item" href="#ten!">
-                <img class="johnson" src="assets/images/johnson.png">
-            </a>
-        </div>
 
+    <div id="introContainer">
+        <div class="row">
+            <div class="carousel">
+                <a class="carousel-item" href="#one!">
+                    <img src="assets/images/amazon.png">
+                </a>
+                <a class="carousel-item" href="#two!">
+                    <img class="apple" src="assets/images/apple.png">
+                </a>
+                <a class="carousel-item" href="#three!">
+                    <img class="tesla" src="assets/images/tesla.png">
+                </a>
+                <a class="carousel-item" href="#four!">
+                    <img class="netflix" src="assets/images/netflix.png">
+                </a>
+                <a class="carousel-item" href="#five!">
+                    <img class="jpmorgan" src="assets/images/jpmorgan.png">
+                </a>
+                <a class="carousel-item" href="#six!">
+                    <img class="alphabet" src="assets/images/alphabet.png">
+                </a>
+                <a class="carousel-item" href="#seven!">
+                    <img class="berkshire" src="assets/images/berkshire.png">
+                </a>
+                <a class="carousel-item" href="#eight!">
+                    <img class="microsoft" src="assets/images/microsoft.png">
+                </a>
+                <a class="carousel-item" href="#nine!">
+                    <img class="disney" src="assets/images/disney.png">
+                </a>
+                <a class="carousel-item" href="#ten!">
+                    <img class="johnson" src="assets/images/johnson.png">
+                </a>
+            </div>
+
+        </div>
     </div>
 
-    <div class="row">
-    
-        <div class="column col-sm-12">
-            <div class="main-display">
+    <div id="infoContainer">
+        <div class="row">
 
-                Main Display
+            <div class="column col-sm-12">
+                <div class="main-display">
 
-                <br>
-                <ul class="collapsible z-depth-2 " data-collapsible="expandable" data-visibility="hidden">
-                    <li>
-                        <div class="collapsible-header z-depth-2">
-                            <i class="material-icons">attach_money</i>Stock Price</div>
-                        <div class="collapsible-body stock-price">
-                            <span id="stock-price">Lorem ipsum dolor sit amet.</span>
+                    Main Display
+
+                    <br>
+                    <ul class="collapsible z-depth-2 " data-collapsible="expandable" data-visibility="hidden">
+                        <li>
+                            <div class="collapsible-header z-depth-2">
+                                <i class="material-icons">attach_money</i>Stock Price</div>
+                            <div class="collapsible-body stock-price">
+                                <span id="stock-price">Lorem ipsum dolor sit amet.</span>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header z-depth-2">
+                                <i class="material-icons">chrome_reader_mode</i>News</div>
+                            <div class="collapsible-body company-news">
+                                <span id="company-news">Lorem ipsum dolor sit amet.</span>
+                            </div>
+                        </li>
+
+                    </ul>
+                    <div class="row">
+                        <div class="stock-buy-calc col s12" data-visibility="hidden">
+                            Enter a stock symbol to BUY
+                            <div class="input-field inline" data-visibility="hidden">
+                                <input id="stock-symbol" type="stock-symbol" class="validate">
+                                <label for="stock-symbol" data-error="wrong" data-success="right">Stock Symbol</label>
+                            </div>
                         </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header z-depth-2">
-                            <i class="material-icons">chrome_reader_mode</i>News</div>
-                        <div class="collapsible-body company-news">
-                            <span id="company-news">Lorem ipsum dolor sit amet.</span>
-                        </div>
-                    </li>
-
-                </ul>
-                <div class="row">
-                    <div class="stock-buy-calc col s12" data-visibility="hidden">
-                        Enter a stock symbol to BUY
-                        <div class="input-field inline" data-visibility="hidden">
-                            <input id="stock-symbol" type="stock-symbol" class="validate">
-                            <label for="stock-symbol" data-error="wrong" data-success="right">Stock Symbol</label>
+                        <div class="stock-sell-calc col s12" data-visibility="hidden">
+                            Enter a stock symbol to SELL
+                            <div class="input-field inline" data-visibility="hidden">
+                                <input id="stock-symbol" type="stock-symbol" class="validate">
+                                <label for="stock-symbol" data-error="wrong" data-success="right">Stock Symbol</label>
+                            </div>
                         </div>
                     </div>
-                    <div class="stock-sell-calc col s12" data-visibility="hidden">
-                        Enter a stock symbol to SELL
-                        <div class="input-field inline" data-visibility="hidden">
-                            <input id="stock-symbol" type="stock-symbol" class="validate">
-                            <label for="stock-symbol" data-error="wrong" data-success="right">Stock Symbol</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="basic-calculator panel-body" data-visibility="hidden">
-                    <button id="button-1" class="btn btn-primary number" value="1">
-                        <h1>1</h1>
-                    </button>
-                    <button id="button-2" class="btn btn-primary number" value="2">
-                        <h1>2</h1>
-                    </button>
-                    <button id="button-3" class="btn btn-primary number" value="3">
-                        <h1>3</h1>
-                    </button>
-                    <button id="button-plus" class="btn btn-danger operator" value="plus">
-                        <h1>+</h1>
-                    </button>
-                    <br>
-                    <br>
-                    <button id="button-4" class="btn btn-primary number" value="4">
-                        <h1>4</h1>
-                    </button>
-                    <button id="button-5" class="btn btn-primary number" value="5">
-                        <h1>5</h1>
-                    </button>
-                    <button id="button-6" class="btn btn-primary number" value="6">
-                        <h1>6</h1>
-                    </button>
-                    <button id="button-minus" class="btn btn-danger operator" value="minus">
-                        <h1>&minus;</h1>
-                    </button>
-                    <br>
-                    <br>
-                    <button id="button-7" class="btn btn-primary number" value="7">
-                        <h1>7</h1>
-                    </button>
-                    <button id="button-8" class="btn btn-primary number" value="8">
-                        <h1>8</h1>
-                    </button>
-                    <button id="button-9" class="btn btn-primary number" value="9">
-                        <h1>9</h1>
-                    </button>
-                    <button id="button-multiply" class="btn btn-danger operator" value="times">
-                        <h1>&times;</h1>
-                    </button>
-                    <br>
-                    <br>
-                    <button id="button-0" class="btn btn-primary number" value="0">
-                        <h1>0</h1>
-                    </button>
-                    <button id="button-divide" class="btn btn-danger operator" value="divide">
-                        <h1>&divide;</h1>
-                    </button>
-                    <button id="button-power" class="btn btn-danger operator" value="power">
-                        <h1>^</h1>
-                    </button>
-                    <button id="button-equal" class="btn btn-success equal" value="equals">
-                        <h1>=</h1>
-                    </button>
-                    <br>
-                    <br>
-                    <button id="button-clear" class="btn btn-default clear" value="clear">
-                        <h1>clear</h1>
-                    </button>
+
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="column col-sm-12">
-            <div class="news-feed">
-                News Feed
-            </div>
-        </div>
-    </div>
+
 
     </div>
 
-    </div>
 
     <script src="assets/javascript/app.js"></script>
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
