--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         crossorigin="anonymous"></script>
     <!-- Adding bootstrap 3.3.7 CSS
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-    <!-- Adding our stylesheet -->
-    <link rel="stylesheet" href="assets/style/style.css">
+
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -23,6 +22,8 @@
     <script src="assets/javascript/main.js"></script>
     <!-- Adding ajax javascript -->
     <script src="assets/javascript/ajax.js"></script>
+    <!-- Adding our stylesheet -->
+    <link rel="stylesheet" href="assets/style/style.css">
 
     <title>Stock Calculator</title>
 </head>
@@ -30,7 +31,7 @@
 <body>
     <div class="row">
         <nav>
-            <div class="nav-wrapper">
+            <div class="nav-wrapper #f4511e deep-orange darken-1">
                 <a href="#" class="brand-logo">Stocks.com</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li>
@@ -89,33 +90,35 @@
         </div>
     </div>
     <!-- TradingView Widget BEGIN -->
-    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
-        {
-            "symbols": [
-                {
-                    "proName": "INDEX:SPX",
-                    "title": "S&P 500"
-                },
-                {
-                    "proName": "INDEX:IUXX",
-                    "title": "Nasdaq 100"
-                },
-                {
-                    "proName": "FX_IDC:EURUSD",
-                    "title": "EUR/USD"
-                },
-                {
-                    "proName": "NYMEX:CL1!",
-                    "title": "Crude Oil"
-                },
-                {
-                    "proName": "FX_IDC:XAUUSD",
-                    "title": "Gold"
-                }
-            ],
-                "locale": "en"
-        }
-    </script>
+    <footer class="page-footer footer-fixed">
+        <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
+            {
+                "symbols": [
+                    {
+                        "proName": "INDEX:SPX",
+                        "title": "S&P 500"
+                    },
+                    {
+                        "proName": "INDEX:IUXX",
+                        "title": "Nasdaq 100"
+                    },
+                    {
+                        "proName": "FX_IDC:EURUSD",
+                        "title": "EUR/USD"
+                    },
+                    {
+                        "proName": "NYMEX:CL1!",
+                        "title": "Crude Oil"
+                    },
+                    {
+                        "proName": "FX_IDC:XAUUSD",
+                        "title": "Gold"
+                    }
+                ],
+                    "locale": "en"
+            }
+        </script>
+    </footer>
     <!-- TradingView Widget END -->
 </body>
 
