--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         crossorigin="anonymous"></script>
     <!-- Adding bootstrap 3.3.7 CSS
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
-
+    <!-- Adding our stylesheet -->
+    <link rel="stylesheet" href="assets/style/style.css">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -22,8 +23,7 @@
     <script src="assets/javascript/main.js"></script>
     <!-- Adding ajax javascript -->
     <script src="assets/javascript/ajax.js"></script>
-    <!-- Adding our stylesheet -->
-    <link rel="stylesheet" href="assets/style/style.css">
+
 
     <title>Stock Calculator</title>
 </head>
@@ -35,7 +35,8 @@
                 <a href="#" class="brand-logo">Stocks.com</a>
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li>
-                        <a href="sass.html">Find A Company</a>
+                        <!-- Dropdown Trigger -->
+                        <a class='dropdown-button btn' href='#' data-activates='dropdown1'>Find A Company</a>
                     </li>
                     <li>
                         <a href="badges.html">Educate Yourself</a>
@@ -47,6 +48,21 @@
             </div>
         </nav>
     </div>
+    <ul id='dropdown1' class='dropdown-content'>
+        <li>
+            <div class = "input-field">
+                <i class = "material-icons prefix">mode_edit</i>
+                <textarea id = "input-company-name"></textarea>
+                <label for = "input-company-name">Company Name</label>
+             </div>
+            
+            <!-- <input id="last_name" type="text" class="validate">
+            <label for="last_name">Last Name</label> -->
+            <!-- <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <i class="material-icons right">send</i>
+              </button> -->
+        </li>
+    </ul>
 
     <div id="introContainer">
         <div class="row">
@@ -65,6 +81,7 @@
             </div>
         </div>
     </div>
+
     <div id="infoContainer">
         <div class="row">
             <div class="column col s12">
@@ -89,8 +106,10 @@
             </div>
         </div>
     </div>
-    <!-- TradingView Widget BEGIN -->
+
     <footer class="page-footer footer-fixed">
+        <!-- TradingView Widget BEGIN -->
+
         <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
             {
                 "symbols": [
@@ -118,8 +137,9 @@
                     "locale": "en"
             }
         </script>
+
+        <!-- TradingView Widget END -->
     </footer>
-    <!-- TradingView Widget END -->
 </body>
 
 </html>
