--- a/index.html
+++ b/index.html
@@ -8,169 +8,148 @@
     <!-- Adding jquery 3.2.1 reference -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-    <!-- Adding bootstrap 3.3.7 CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!-- Adding our stylesheet -->
-    
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="assets/materialize/css/materialize.min.css" media="screen,projection" />
+    <!-- Adding our stylesheet -->
     <link rel="stylesheet" href="assets/style/style.css">
-    <title>Stock Calculator</title>
+
+
+    <!-- Adding our stylesheet -->
+    <link rel="stylesheet" href="assets/style/style.css">
+
+    <!-- Adding our javascript -->
+    <!-- <script src="assets/javascript/app.js"></script> -->
+
+    <!-- Adding main javascript -->
+    <script src="assets/javascript/main.js"></script>
+
+    <!-- Adding ajax javascript -->
+    <script src="assets/javascript/ajax.js"></script>
+
+
+    <title>Stocks.com</title>
 </head>
 
 <body>
-    <!-- Spencer was here -->
-
     <div class="row">
-        <nav>
+        <nav class="white">
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Stocks.com</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <a href='#' class="brand-logo red-text">Stock.com</a>
+                <ul class="high-on-med-and-down right">
                     <li>
-                        <a href="sass.html">Find A Company</a>
+                        <div class="center row">
+                            <div class- "col s12">
+                                <div class="row" id="topbarsearch">
+                                    <form method="get" action="/search" id="search">
+                                        <input name="q" type="text" size="40" placeholder="Search.." />
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                     </li>
                     <li>
-                        <a href="badges.html">Educate Yourself</a>
+                        <a href='%' class="red-text">One</a>
                     </li>
                     <li>
-                        <a href="collapsible.html">Coming Soon</a>
+                        <a href='%' class="red-text">Two</a>
+                    </li>
+                    <li>
+                        <a href='%' class="red-text">Three</a>
                     </li>
                 </ul>
             </div>
         </nav>
     </div>
+    <!-- <ul id='dropdown1' class='dropdown-content'>
+        <li>
+            <div class = "input-field">
+                <i class = "material-icons prefix">mode_edit</i>
+                <textarea id = "input-company-name"></textarea>
+                <label for = "input-company-name">Company Name</label>
+             </div>
+            
+            <input id="last_name" type="text" class="validate">
+            <label for="last_name">Last Name</label>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                <i class="material-icons right">send</i>
+              </button>
+        </li>
+    </ul> -->
 
     <div id="introContainer">
         <div class="row">
             <div class="carousel">
-                <a class="carousel-item" href="#one!">
-                    <img src="assets/images/amazon.png">
-                </a>
-                <a class="carousel-item" href="#two!">
-                    <img class="apple" src="assets/images/apple.png">
-                </a>
-                <a class="carousel-item" href="#three!">
-                    <img class="tesla" src="assets/images/tesla.png">
-                </a>
-                <a class="carousel-item" href="#four!">
-                    <img class="netflix" src="assets/images/netflix.png">
-                </a>
-                <a class="carousel-item" href="#five!">
-                    <img class="jpmorgan" src="assets/images/jpmorgan.png">
-                </a>
-                <a class="carousel-item" href="#six!">
-                    <img class="alphabet" src="assets/images/alphabet.png">
-                </a>
-                <a class="carousel-item" href="#seven!">
-                    <img class="berkshire" src="assets/images/berkshire.png">
-                </a>
-                <a class="carousel-item" href="#eight!">
-                    <img class="microsoft" src="assets/images/microsoft.png">
-                </a>
-                <a class="carousel-item" href="#nine!">
-                    <img class="disney" src="assets/images/disney.png">
-                </a>
-                <a class="carousel-item" href="#ten!">
-                    <img class="johnson" src="assets/images/johnson.png">
+                <img class="carousel-item" id="amazon" src="assets/images/amazon.png">
+                <img class="carousel-item" id="apple" src="assets/images/apple.png">
+                <img class="carousel-item" id="tesla" src="assets/images/tesla.png">
+                <img class="carousel-item" id="netflix" src="assets/images/netflix.png">
+                <img class="carousel-item" id="jpmorgan" src="assets/images/jpmorgan.png">
+                <img class="carousel-item" id="alphabet" src="assets/images/alphabet.png">
+                <img class="carousel-item" id="berkshire" src="assets/images/berkshire.png">
+                <img class="carousel-item" id="microsoft" src="assets/images/microsoft.png">
+                <img class="carousel-item" id="disney" src="assets/images/disney.png">
+                <img class="carousel-item" id="johnson" src="assets/images/johnson.png">
                 </a>
             </div>
-
         </div>
     </div>
 
     <div id="infoContainer">
         <div class="row">
-
-            <div class="column col-sm-12">
-                <div class="main-display">
-
-                    Main Display
-
-                    <br>
-                    <ul class="collapsible z-depth-2 " data-collapsible="expandable" data-visibility="hidden">
+            <div class="column col s12">
+                <div class="main-display" data-visibility="hidden">
+                    <ul class="collapsible z-depth-2 " data-collapsible="expandable">
                         <li>
                             <div class="collapsible-header z-depth-2">
                                 <i class="material-icons">attach_money</i>Stock Price</div>
                             <div class="collapsible-body stock-price">
-                                <span id="stock-price">Lorem ipsum dolor sit amet.</span>
                             </div>
                         </li>
                         <li>
                             <div class="collapsible-header z-depth-2">
                                 <i class="material-icons">chrome_reader_mode</i>News</div>
-                            <div class="collapsible-body company-news">
-                                <span id="company-news">Lorem ipsum dolor sit amet.</span>
-                            </div>
+                            <div class="collapsible-body company-news"></div>
                         </li>
-
                     </ul>
-                    <div class="row">
-                        <div class="stock-buy-calc col s12" data-visibility="hidden">
-                            Enter a stock symbol to BUY
-                            <div class="input-field inline" data-visibility="hidden">
-                                <input id="stock-symbol" type="stock-symbol" class="validate">
-                                <label for="stock-symbol" data-error="wrong" data-success="right">Stock Symbol</label>
-                            </div>
-                        </div>
-                        <div class="stock-sell-calc col s12" data-visibility="hidden">
-                            Enter a stock symbol to SELL
-                            <div class="input-field inline" data-visibility="hidden">
-                                <input id="stock-symbol" type="stock-symbol" class="validate">
-                                <label for="stock-symbol" data-error="wrong" data-success="right">Stock Symbol</label>
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
             </div>
         </div>
     </div>
 
-
-    </div>
-
-
-    <script src="assets/javascript/app.js"></script>
-    <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
-
-    <!-- TradingView Widget BEGIN -->
-    <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">{
-            "symbols": [
-                {
-                    "proName": "INDEX:SPX",
-                    "title": "S&P 500"
-                },
-                {
-                    "proName": "INDEX:IUXX",
-                    "title": "Nasdaq 100"
-                },
-                {
-                    "proName": "FX_IDC:EURUSD",
-                    "title": "EUR/USD"
-                },
-                {
-                    "proName": "NYMEX:CL1!",
-                    "title": "Crude Oil"
-                },
-                {
-                    "proName": "FX_IDC:XAUUSD",
-                    "title": "Gold"
-                }
-            ],
-                "locale": "en"
-        }
-    </script>
+    <footer class="page-footer footer-fixed">
+        <!-- TradingView Widget BEGIN -->
+        <script src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js">
+            {
+                "symbols": [
+                    {
+                        "proName": "INDEX:SPX",
+                        "title": "S&P 500"
+                    },
+                    {
+                        "proName": "INDEX:IUXX",
+                        "title": "Nasdaq 100"
+                    },
+                    {
+                        "proName": "FX_IDC:EURUSD",
+                        "title": "EUR/USD"
+                    },
+                    {
+                        "proName": "NYMEX:CL1!",
+                        "title": "Crude Oil"
+                    },
+                    {
+                        "proName": "FX_IDC:XAUUSD",
+                        "title": "Gold"
+                    }
+                ],
+                    "locale": "en"
+            }
+        </script>
+    </footer>
     <!-- TradingView Widget END -->
-
-    <!-- <div class="news-feed">
-                News Feed
-            </div>
-        </div> -->
-    </div>
-    </div>
-    <script src="assets/javascript/app.js"></script>
     <script type="text/javascript" src="assets/materialize/js/materialize.min.js"></script>
 </body>
 
